Zadaci sa blokovima riješeni.